--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body {
 
 body {
 	line-height: 1.5;
-	white-space: pre-wrap;
 }
 
 a,
@@ -32,16 +31,15 @@ h1,
 h2,
 h3 {
 	letter-spacing: -0.01em;
-	line-height: 1.2;
+	line-height: 1.5;
 	font-weight: 600;
-	margin-bottom: 0;
+	margin-bottom: 0.5em;
 }
 
 .page-title {
 	font-size: 2.5rem;
 	font-weight: 700;
 	margin-top: 0;
-	margin-bottom: 0.75em;
 }
 
 h1 {
@@ -355,7 +353,7 @@ blockquote {
 }
 
 .sans { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol"; }
-.code { font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace; }
+.code { font-family: Courier, monospace; }
 .serif { font-family: Lyon-Text, Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "Songti TC", "Songti SC", "SimSun", "Nanum Myeongjo", NanumMyeongjo, Batang, serif; }
 .mono { font-family: iawriter-mono, Nitti, Menlo, Courier, monospace; }
 .pdf .sans { font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol", 'Twemoji', 'Noto Color Emoji', 'Noto Sans CJK SC', 'Noto Sans CJK KR'; }
