--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 @media only screen {
 	body {
-		margin: 2em auto;
+		margin: 2em 20%;
 		max-width: 900px;
 		color: rgb(55, 53, 47);
 	}
